--- a/style.css
+++ b/style.css
@@ -439,3 +439,191 @@ nav {
     transform: rotateY(90deg);
   }
   
+
+  /* Pop Up Styling */
+
+  /* Stat Modal */
+  .stat-modal {
+    background-color: rgba(0, 0, 0, .5);
+    opacity: 0;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    /* transition: all .3s ease-in; */
+    z-index: -1;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .stat-modal.open {
+    opacity: 1;
+    z-index: 999;
+  }
+
+  .inner-stat-modal {
+    background-color: white;
+    border-radius: var(--main-radius);
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 1);
+    padding:  var(--main-padding);
+    text-align: center;
+    width: 70vw;
+    max-width: 40rem;
+    height: 40vh;
+
+  }
+
+  .inner-stat-modal h2 {
+    margin: 0;
+    padding-top: var(--main-padding);
+    padding-bottom: var(--main-padding);
+
+  }
+
+  .best-score-container {
+    grid-area: best-score;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .25fr .25fr;
+    grid-template-areas: 
+      "bst-score"
+      "best";
+    justify-content: center;
+    grid-gap: .25rem;
+  }
+
+  .best {
+    grid-area: best;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(.5rem, 1.75vmin, 1.75vmin);
+    font-weight: 700;
+  }
+  .best-score {
+    grid-area: bst-score;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(1rem, 1.85vmin, 1.85vmin);
+  }
+
+
+  .average-score-container {
+    grid-area: average-score;
+    
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .25fr .25fr;
+    grid-template-areas: 
+      "avg-score"
+      "avg";
+
+      grid-gap: .25rem;
+
+  }
+  .avg {
+    grid-area: avg;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(.5rem, 1.75vmin, 1.75vmin);
+    font-weight: 700;
+
+  }
+  .avg-score {
+    grid-area: avg-score;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(1rem, 1.85vmin, 1.85vmin);
+  }
+
+  .last-score-container {
+    grid-area: last-score;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .25fr .25fr;
+    grid-template-areas: 
+      "last-score"
+      "last";
+    justify-content: center;
+    grid-gap: .25rem;
+  }
+
+  .last {
+    grid-area: last;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(.5rem, 1.75vmin, 1.75vmin);
+    font-weight: 700;
+    
+  }
+
+  .last-score {
+    grid-area: last-score;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(1rem, 1.85vmin, 1.85vmin);
+    
+  }
+
+  .accuracy-container {
+    grid-area: accuracy;
+
+  }
+
+  .streak-container {
+    grid-area: streak;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: .25fr .25fr;
+    grid-template-areas: 
+      "stk-count"
+      "stk";
+    grid-gap: .1rem;
+  }
+  .stk {
+    grid-area: stk;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(.5rem, 1.75vmin, 1.75vmin);
+    font-weight: 700;
+
+  }
+  .stk-count {
+    grid-area: stk-count;
+    display: flex;
+    justify-content: center;
+    font-size: clamp(1rem, 1.85vmin, 1.85vmin);
+
+  }
+
+  .graph-header {
+    grid-area: last10;
+    display: flex;
+    justify-content: center;
+  }
+
+  .graph {
+    grid-area: graph;
+    display: flex;
+    justify-content: center;
+  }
+
+  .stats-container {
+    padding-top: 1.1rem;
+    display: grid;
+    grid-template-columns: .25fr .25fr .25fr .25fr;
+    grid-template-rows: .33fr .33fr .33fr;
+    grid-template-areas: 
+      "streak best-score average-score last-score"
+      "last10 last10 last10 last10"
+      "graph graph graph graph";
+    grid-gap: .25rem;
+    justify-content: center;
+
+  }
